split into core and full install. splits between work appropriate and personal

--- a/core/Brewfile
+++ b/core/Brewfile
@@ -26,58 +26,7 @@ brew 'svn' # Needed to install fonts
 brew 'tree'
 brew 'yt-dlp'
 
-# Emulation
-cask 'chiaki'
-cask 'dolphin'
-cask 'moonlight'
-brew 'ppsspp'
-
 # If there is already an application installed, the cask variant will download but it will not overwrite existing installations.
-
-# Apps
-cask 'airtable'
-cask 'alfred'
-cask 'android-studio'
-cask 'arc'
-cask 'arduino-ide'
-cask 'atext'
-cask 'balenaetcher'
-cask 'bartender'
-cask 'betterdisplay'
-cask 'cardhop'
-cask 'cheatsheet'
-cask 'coolterm'
-cask 'discord'
-cask 'dropbox'
-cask 'eagle'
-cask 'fantastical'
-cask 'firefox'
-cask 'iterm2'
-cask 'mqtt-explorer'
-cask 'mullvadvpn'
-cask 'nextcloud'
-cask 'notion'
-cask 'obsidian'
-cask 'parsec'
-cask 'prusaslicer'
-cask 'rectangle'
-cask 'roon'
-cask 'sketch'
-cask 'slack'
-cask 'sourcetree'
-cask 'spotify'
-cask 'steam'
-cask 'sublime-text'
-cask 'syncthing'
-cask 'tailscale'
-cask 'ticktick'
-cask 'transmission'
-cask 'the-unarchiver'
-cask 'ultimaker-cura'
-cask 'visual-studio-code'
-cask 'vlc'
-cask 'yubico-authenticator'
-cask 'zoom'
 
 # Fonts
 cask 'font-lato'
@@ -86,12 +35,25 @@ cask 'font-roboto'
 cask 'font-source-code-pro-for-powerline'
 cask 'font-source-code-pro'
 
-# Mac App Store
-mas 'Aiko', id: 1672085276
-mas 'Blackmagic Disc Speed Test', id: 425264550
-mas 'Drafts', id: 1435957248
-mas 'Dark Noise: Ambient Sounds', id: 1465439395
-mas 'Hand Mirror', id: 1502839586
-mas 'Paprika', id: 1303222628
-mas 'Speedtest', id: 1153157709
-mas 'Xcode', id: 497799835
+# Core Apps
+cask 'alfred'
+cask 'android-studio'
+cask 'arc'
+cask 'atext'
+cask 'balenaetcher'
+cask 'bartender'
+cask 'betterdisplay'
+cask 'cheatsheet'
+cask 'firefox'
+cask 'iterm2'
+cask 'obsidian'
+cask 'rectangle'
+cask 'slack'
+cask 'sourcetree'
+cask 'spotify'
+cask 'sublime-text'
+cask 'the-unarchiver'
+cask 'visual-studio-code'
+cask 'vlc'
+cask 'yubico-authenticator'
+cask 'zoom'
