replace bartender with ice

--- a/core/Brewfile
+++ b/core/Brewfile
@@ -10,6 +10,7 @@ brew 'fprobe'
 brew 'git'
 brew 'grep'
 brew 'jenv'
+brew 'jordanbaird-ice'
 brew 'mackup'
 brew 'mas' # Mac App Store manager
 brew 'maven'
@@ -41,8 +42,8 @@ cask 'android-studio'
 cask 'arc'
 cask 'atext'
 cask 'balenaetcher'
-cask 'bartender'
 cask 'betterdisplay'
+cask 'bitwarden'
 cask 'cheatsheet'
 cask 'firefox'
 cask 'iterm2'
