added ghostty, lm-studio, zen-browser, raycast. removed alfred

--- a/core/Brewfile
+++ b/core/Brewfile
@@ -37,7 +37,6 @@ cask 'font-source-code-pro-for-powerline'
 cask 'font-source-code-pro'
 
 # Core Apps
-cask 'alfred'
 cask 'android-studio'
 cask 'arc'
 cask 'atext'
@@ -46,8 +45,11 @@ cask 'betterdisplay'
 cask 'bitwarden'
 cask 'cheatsheet'
 cask 'firefox'
+cask 'ghostty'
 cask 'iterm2'
+cask 'lm-studio'
 cask 'obsidian'
+cask 'raycast'
 cask 'rectangle'
 cask 'slack'
 cask 'sourcetree'
@@ -57,4 +59,5 @@ cask 'the-unarchiver'
 cask 'visual-studio-code'
 cask 'vlc'
 cask 'yubico-authenticator'
+cask 'zen-browser'
 cask 'zoom'
