--- a/core/Brewfile
+++ b/core/Brewfile
@@ -1,16 +1,18 @@
 # Binaries
 brew 'bash' # Latest Bash version
 brew 'chezmoi'
+brew 'colima'
 brew 'coreutils' # Those that come with macOS are outdated
 brew 'dfu-util'
 brew 'docker'
+brew 'docker-Buildx'
+brew 'docker-compose'
 brew 'ffmpeg'
 brew 'flac'
 brew 'fprobe'
 brew 'git'
 brew 'grep'
 brew 'jenv'
-brew 'jordanbaird-ice'
 brew 'mackup'
 brew 'mas' # Mac App Store manager
 brew 'maven'
@@ -48,6 +50,7 @@ cask 'firefox'
 cask 'ghostty'
 cask 'iterm2'
 cask 'lm-studio'
+cask 'jordanbaird-ice'
 cask 'obsidian'
 cask 'raycast'
 cask 'rectangle'
