--- a/personal/Brewfile
+++ b/personal/Brewfile
@@ -36,6 +36,7 @@ mas 'Aiko', id: 1672085276
 mas 'Blackmagic Disc Speed Test', id: 425264550
 mas 'Drafts', id: 1435957248
 mas 'Dark Noise: Ambient Sounds', id: 1465439395
+mas 'Flighty – Live Flight Tracker', id: 1358823008
 mas 'Hand Mirror', id: 1502839586
 mas 'Paprika', id: 1303222628
 mas 'Speedtest', id: 1153157709
