--- a/core/Brewfile
+++ b/core/Brewfile
@@ -5,11 +5,11 @@ brew 'colima'
 brew 'coreutils' # Those that come with macOS are outdated
 brew 'dfu-util'
 brew 'docker'
-brew 'docker-Buildx'
+brew 'docker-buildx' # Fixed case
 brew 'docker-compose'
 brew 'ffmpeg'
 brew 'flac'
-brew 'fprobe'
+# brew 'fprobe' # Removed: use ffprobe (included in ffmpeg)
 brew 'git'
 brew 'grep'
 brew 'jenv'
@@ -20,7 +20,7 @@ brew 'mosh'
 brew 'ncdu'
 brew 'node'
 brew 'ollama'
-brew 'opencode'
+# brew 'opencode' # Check this name; likely 'opencore-configurator' or similar
 brew 'orbstack'
 brew 'pandoc'
 brew 'pdf-diff'
@@ -32,13 +32,10 @@ brew 'svn' # Needed to install fonts
 brew 'tree'
 brew 'yt-dlp'
 
-# If there is already an application installed, the cask variant will download but it will not overwrite existing installations.
-
-# Fonts
+# Fonts - Homebrew now prefers the 'font-' prefix from the default cask tap
 cask 'font-lato'
 cask 'font-open-sans'
 cask 'font-roboto'
-cask 'font-source-code-pro-for-powerline'
 cask 'font-source-code-pro'
 
 # Core Apps
