cheatsheet was depricated from brew. broke entire script

--- a/core/Brewfile
+++ b/core/Brewfile
@@ -9,7 +9,7 @@ brew 'docker-buildx' # Fixed case
 brew 'docker-compose'
 brew 'ffmpeg'
 brew 'flac'
-# brew 'fprobe' # Removed: use ffprobe (included in ffmpeg)
+brew 'fprobe'
 brew 'git'
 brew 'grep'
 brew 'jenv'
@@ -20,7 +20,7 @@ brew 'mosh'
 brew 'ncdu'
 brew 'node'
 brew 'ollama'
-# brew 'opencode' # Check this name; likely 'opencore-configurator' or similar
+brew 'opencode'
 brew 'orbstack'
 brew 'pandoc'
 brew 'pdf-diff'
@@ -45,7 +45,6 @@ cask 'atext'
 cask 'balenaetcher'
 cask 'betterdisplay'
 cask 'bitwarden'
-cask 'cheatsheet'
 cask 'firefox'
 cask 'ghostty'
 cask 'iterm2'
